--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -18,6 +18,8 @@
 .skills .tools ul li img {
     max-width: 50px;
     max-height: 50px;
+    min-width: 50px;
+    min-width: 50px;
     margin: 0.5rem 0.5rem;
 }
 
