--- a/assets/css/course.css
+++ b/assets/css/course.css
@@ -26,6 +26,6 @@
     display: inline-block;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('/assets/img/icons/period.svg');
+    background-image: url('assets/img/icons/period.svg');
     margin-right: 0.5rem;
 }
