--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -13,7 +13,7 @@
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('assets/img/icons/header.svg');
+    background-image: url('/assets/img/icons/header.svg');
     position: absolute;
     top: 1rem;
     right: 1rem;
@@ -56,19 +56,19 @@
 }
 
 .informations .job::before {
-    background-image: url('assets/img/icons/job.svg');
+    background-image: url('/assets/img/icons/job.svg');
 }
 
 .informations .location::before {
-    background-image: url('assets/img/icons/location.svg');
+    background-image: url('/assets/img/icons/location.svg');
 }
 
 .informations .phone::before {
-    background-image: url('assets/img/icons/phone.svg');
+    background-image: url('/assets/img/icons/phone.svg');
 }
 
 .informations .email::before {
-    background-image: url('assets/img/icons/email.svg');
+    background-image: url('/assets/img/icons/email.svg');
 }
 
 @media (min-width: 768px) {
